2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-mode-map): Inherit from special-mode-map.
	(bbdb-quit-window): Renamed from bbdb-bury-buffer.  Use
	quit-window.
	(bbdb-mode):  Use define-derived-mode.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-indent-string): New function.
	(bbdb-display-record-multi-line): Use it.  (Bug#33101)

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el:  Autoload browse-url-url-at-point.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-create-hook, bbdb-change-hook):  Call
	add-hook for the default hook functions.

2011-04-11  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): Ensure initialization of
	the database.

2011-04-10  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-utilities-anniv): New customization group.
	(bbdb-create-hook, bbdb-change-hook)
	(bbdb-after-change-hook, bbdb-notice-hook)
	(bbdb-default-separator): Improve doc string.
	(bbdb-separator-alist): Improve doc string.  Include entries for
	anniversaries.
	(bbdb-records):  Use make-variable-buffer-local.
	(bbdb-current-field):  Do not remove field-name.
	(bbdb-record-note): Simplified.
	(bbdb-record-note-n): Removed.
	(bbdb-record-note-split): New function.
	(bbdb-record-set-note): Improved documentation.
	(bbdb-format-note, bbdb-record-format-note): New function.
	(bbdb-display-text):  Renamed from bbdb-format-text.
	(bbdb-display-list):  Renamed from bbdb-format-list.
	(bbdb-display-name-organization): Renamed from
	bbdb-format-name-organization.
	(bbdb-display-record-one-line): Renamed from
	bbdb-format-record-one-line.  Unify text properties.
	(bbdb-display-record-multi-line): Renamed from
	bbdb-format-record-multi-line.  Unify text properties.
	(bbdb-display-record-full-multi-line): Renamed from
	bbdb-format-record-full-multi-line.
	(bbdb-display-record-pop-up-multi-line): Renamed from
	bbdb-format-record-pop-up-multi-line.